chore: strip HubSpot/HubL module and templating blocks; regenerate chapters

--- a/mapping/chapter_map.yml
+++ b/mapping/chapter_map.yml
@@ -97,7 +97,7 @@ chapters:
     chapter: 2
     title: Talent Attraction That’s Real
     target_words: 6000
-    estimated_words: 6007
+    estimated_words: 6030
     sources:
       - workhuman-live-2025-recap-show-people-whats-possible#p04~c4684643
       - made-you-look-talent-attraction-at-its-finest#p04~9d8ea1bc
@@ -139,7 +139,7 @@ chapters:
       - ithinkitslove#p01~f6a77d36
       - lets-get-serious-relevance-over-trendiness#p04~e0b0062a
       - john-baldino-celebrates-ten-years-of-humareso#p03~bb66d414
-      - workhuman-live-2025-recap-show-people-whats-possible#p17~5fd465a0
+      - workhuman-live-2025-recap-show-people-whats-possible#p16~bc8bcb75
       - made-you-look-talent-attraction-at-its-finest#p02~c5155260
       - wicked-game-toxicity-shouldnt-be-the-way-to-build-fortitude#p04~edfe0ea0
       - mr-cellophane#p07~dcf31fdd
@@ -149,7 +149,7 @@ chapters:
       - ithinkitslove#p05~5677bfaa
       - lets-get-serious-relevance-over-trendiness#p03~258c91dc
       - john-baldino-celebrates-ten-years-of-humareso#p01~930240fb
-      - workhuman-live-2025-recap-show-people-whats-possible#p13~c2eadbaf
+      - workhuman-live-2025-recap-show-people-whats-possible#p14~445c0ce7
       - made-you-look-talent-attraction-at-its-finest#p07~0f2c29a6
       - wicked-game-toxicity-shouldnt-be-the-way-to-build-fortitude#p03~484e5c85
       - mr-cellophane#p01~a58c8c19
@@ -184,7 +184,9 @@ chapters:
       - wooing-candidates#p05~8cd5d1be
       - passive-sourcing#p01~b0bc02db
       - john-baldino-celebrates-ten-years-of-humareso#p07~e1ae2d24
-      - workhuman-live-2025-recap-show-people-whats-possible#p10~c0f0ce2b
+      - workhuman-live-2025-recap-show-people-whats-possible#p13~c2eadbaf
       - made-you-look-talent-attraction-at-its-finest#p03~17022b38
       - mr-cellophane#p08~f45c6f1b
-      - workhuman-live-2025-recap-show-people-whats-possible#p14~445c0ce7
+      - workhuman-live-2025-recap-show-people-whats-possible#p11~658f2507
+      - mr-cellophane#p09~6ddd112d
+      - workhuman-live-2025-recap-show-people-whats-possible#p15~084efdaa
